--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,22 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#8ecb55",
-        "activityBar.background": "#8ecb55",
-        "activityBar.foreground": "#15202b",
-        "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#3c7dc3",
-        "activityBarBadge.foreground": "#e7e7e7",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#8ecb55",
-        "statusBar.background": "#74b538",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#5b8e2c",
-        "statusBarItem.remoteBackground": "#74b538",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#74b538",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#74b53899",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBar.activeBackground": "#ac19e1",
+        "activityBar.background": "#ac19e1",
+        "activityBar.foreground": "#e7e7e7",
+        "activityBar.inactiveForeground": "#e7e7e799",
+        "activityBarBadge.background": "#c99a16",
+        "activityBarBadge.foreground": "#15202b",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#ac19e1",
+        "statusBar.background": "#8914b3",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#ac19e1",
+        "statusBarItem.remoteBackground": "#8914b3",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#8914b3",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#8914b399",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.remoteColor": "#74b538"
+    "peacock.remoteColor": "#8914b3"
 }
